--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover,user-scalable=no" />
-<title>三秒 GOAL 挑戰｜長按到 3 秒放開</title>
+<title>⚽ 守門員版 三秒GOAL挑戰</title>
 <style>
 :root {
   --brand: #ffcc00;
@@ -13,18 +13,14 @@
   --digitGlow:rgba(255,80,60,.55);
 }
 
-/* 背景草皮 */
 html,body{
-  height:100%;width:100%;
-  margin:0;padding:0;
+  height:100%;width:100%;margin:0;padding:0;
   background:repeating-linear-gradient(90deg,var(--grass1) 0 14vw,var(--grass2) 14vw 28vw);
   font-family:"Noto Sans TC",system-ui,-apple-system,Segoe UI,Roboto,"PingFang TC",sans-serif;
-  color:#fff;
-  -webkit-tap-highlight-color:transparent;
+  color:#fff;-webkit-tap-highlight-color:transparent;
   display:flex;align-items:center;justify-content:center;
 }
 
-/* 外框卡 */
 .card{
   width:min(94vw,820px);
   border-radius:22px;
@@ -32,37 +28,49 @@ html,body{
   background:rgba(0,0,0,.25);
   box-shadow:0 10px 30px rgba(0,0,0,.4);
   text-align:center;
-  position:relative;
-  overflow:hidden;
+  position:relative;overflow:hidden;
   padding:16px 0 24px;
 }
 
 .logo{width:clamp(120px,25%,220px);display:block;margin:10px auto;}
 
-/* 場地 */
 .field{position:relative;width:100%;aspect-ratio:16/9;overflow:hidden;}
-.goal-wrap{position:absolute;top:12%;left:50%;transform:translateX(-50%);width:80%;}
+
+/* 球門 + 守門員 */
+.goal-wrap{position:absolute;top:12%;left:50%;transform:translateX(-50%);width:80%;pointer-events:none;}
 .goal{width:100%;height:auto;display:block;}
 
-/* 守門員 */
 .goalie{
-  position:absolute;left:50%;bottom:30%;width:clamp(80px,10%,120px);
+  position:absolute;left:50%;bottom:6%;
+  width:clamp(70px,12%,120px);
   transform:translateX(-50%);
   animation:goalie-move 2s ease-in-out infinite alternate;
-  animation-play-state:paused;z-index:3;
+  animation-play-state:paused;
+  transition:transform .5s ease;
+  z-index:12;
 }
-@keyframes goalie-move{0%{transform:translateX(-120px);}100%{transform:translateX(120px);}}
+@keyframes goalie-move{
+  0%   { transform:translateX(calc(-50% - 32%)); }
+  100% { transform:translateX(calc(-50% + 32%)); }
+}
 .goalie.running{animation-play-state:running;}
+.goalie.big{transform:translateX(-50%) translateY(-6%) scale(1.3);z-index:13;}
 
 /* 足球 */
 .ball-track{
-  position:absolute;left:50%;bottom:20%;width:clamp(70px,9%,90px);
+  position:absolute;left:50%;bottom:20%;
+  width:clamp(70px,9%,90px);
   transform:translateX(-50%);
   animation:ball-move 2s linear infinite alternate;
-  animation-play-state:paused;z-index:2;
+  animation-play-state:paused;
+  z-index:20;
 }
-@keyframes ball-move{0%{transform:translateX(-130px);}100%{transform:translateX(130px);}}
+@keyframes ball-move{
+  0%{transform:translateX(-130px);}
+  100%{transform:translateX(130px);}
+}
 .ball-track.running{animation-play-state:running;}
+.ball-sprite{position:absolute;inset:0;transform:translate(0,0);}
 .ball-sprite img{width:100%;display:block;}
 
 /* 文字 */
@@ -101,7 +109,7 @@ p{font-size:clamp(14px,3.6vw,18px);opacity:.9;}
 .goal-banner.show{animation:banner-pop .9s cubic-bezier(.2,.9,.2,1) forwards;}
 @keyframes banner-pop{0%{opacity:0;transform:translateX(-50%) translateY(-12px) scale(.82)}60%{opacity:1;transform:translateX(-50%) scale(1.06)}100%{opacity:1;transform:translateX(-50%) scale(1)}}
 
-/* QR */
+/* QR 彈窗 */
 .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.55);z-index:50;}
 .modal.show{display:flex;}
 .modal-card{width:min(92vw,420px);background:#fff;color:#111;border-radius:18px;padding:20px;text-align:center;box-shadow:0 20px 40px rgba(0,0,0,.35);}
@@ -126,8 +134,9 @@ p{font-size:clamp(14px,3.6vw,18px);opacity:.9;}
         <rect x="60" y="24" width="520" height="160" fill="url(#net)" stroke="rgba(255,255,255,.6)" stroke-width="6" rx="8"/>
         <rect x="40" y="12" width="560" height="188" fill="none" stroke="rgba(255,255,255,.85)" stroke-width="10" rx="14"/>
       </svg>
+      <img id="goalie" class="goalie" src="goalie.png" alt="goalie">
     </div>
-    <img id="goalie" class="goalie" src="goalie.png" alt="goalie">
+
     <div id="ballTrack" class="ball-track">
       <div id="ball" class="ball-sprite"><img src="soccer.png" alt="ball"></div>
     </div>
@@ -141,7 +150,6 @@ p{font-size:clamp(14px,3.6vw,18px);opacity:.9;}
   <div id="result" class="result"></div>
 </div>
 
-<!-- QR -->
 <div id="qrModal" class="modal">
   <div class="modal-card">
     <h3>歡迎追蹤 ABC-MART 官方 IG！</h3>
@@ -160,6 +168,8 @@ p{font-size:clamp(14px,3.6vw,18px);opacity:.9;}
   const holdBtn=document.getElementById('holdBtn');
   const resultEl=document.getElementById('result');
   const ballTrack=document.getElementById('ballTrack');
+  const ballEl=document.getElementById('ball');
+  const goalSvg=document.querySelector('.goal');
   const goalieEl=document.getElementById('goalie');
   const flashEl=document.getElementById('flash');
   const bannerEl=document.getElementById('banner');
@@ -167,43 +177,81 @@ p{font-size:clamp(14px,3.6vw,18px);opacity:.9;}
   const closeQr=document.getElementById('closeQr');
   const goalSound=document.getElementById('goalSound');
 
-  let startTime=0,ticker=0,running=false,goalieSpeedTimer=0;
+  let startTime=0,ticker=0,running=false,goalieSpeedTimer=0,kickAnim=null;
 
   const pad2=n=>n.toString().padStart(2,'0');
   const fmtSSCC=ms=>{const t=ms/1000,s=Math.floor(t),cs=Math.floor((t-s)*100);return`${pad2(s)}:${pad2(cs)}`};
+
+  function kickToGoal(){
+    const b = ballEl.getBoundingClientRect();
+    const g = goalSvg.getBoundingClientRect();
+    const dx = (g.left + g.width/2) - (b.left + b.width/2);
+    const dy = (g.top + g.height*0.35) - (b.top + b.height/2);
+    kickAnim = ballEl.animate(
+      [
+        { transform: 'translate(0,0)' },
+        { transform: `translate(${dx*0.6}px, ${dy - Math.min(0.28*g.height, 180)}px)` },
+        { transform: `translate(${dx}px, ${dy}px)` }
+      ],
+      { duration: 850, easing: 'cubic-bezier(.2,.7,.2,1)', fill: 'forwards' }
+    );
+    return kickAnim.finished.finally(()=>kickAnim=null).catch(()=>{});
+  }
+
+  function resetBall(){
+    if (kickAnim){ try{kickAnim.cancel();}catch(e){} kickAnim=null; }
+    ballEl.getAnimations().forEach(a=>a.cancel());
+    ballEl.style.transform = 'translate(0,0)';
+  }
 
   function start(){
     if(running)return;
     running=true;startTime=performance.now();
     timerEl.textContent='00:00';resultEl.textContent='';
-    goalieEl.src='goalie.png';flashEl.classList.remove('show');bannerEl.classList.remove('show');
+    goalieEl.src='goalie.png';goalieEl.classList.remove('big');
+    flashEl.classList.remove('show');bannerEl.classList.remove('show');
+    resetBall();
+
     ballTrack.classList.add('running');goalieEl.classList.add('running');
     holdBtn.classList.add('hold');holdBtn.textContent='放開射門！';
+
     goalieEl.style.animationDuration=(1.5+Math.random()*1.5).toFixed(2)+'s';
     goalieSpeedTimer=setInterval(()=>{if(!running)return;goalieEl.style.animationDuration=(1.5+Math.random()*1.5).toFixed(2)+'s';},1200);
+
     ticker=setInterval(()=>{timerEl.textContent=fmtSSCC(performance.now()-startTime);},50);
   }
 
-  function stop(){
+  async function stop(){
     if(!running)return;
     running=false;clearInterval(ticker);clearInterval(goalieSpeedTimer);
     const elapsed=(performance.now()-startTime)/1000;timerEl.textContent=fmtSSCC(elapsed*1000);
     ballTrack.classList.remove('running');goalieEl.classList.remove('running');
     holdBtn.classList.remove('hold');holdBtn.textContent='按住開始，放開射門';
+
     const secInt=Math.floor(elapsed);
     if(secInt===TARGET_SEC){
       goalieEl.src='goalie_miss.png';
+      goalieEl.classList.add('big');
+      await kickToGoal();
       flashEl.classList.add('show');bannerEl.classList.add('show');
       resultEl.innerHTML='GOAL!! 三秒命中 🎉<br><span style="color:#ffeb3b;font-weight:900;">挑戰成功！</span>';
       try{goalSound.currentTime=0;goalSound.play();}catch(e){}
       setTimeout(()=>qrModal.classList.add('show'),2000);
     }else{
       goalieEl.src='goalie_save.png';
+      goalieEl.classList.remove('big');
       resultEl.textContent=(secInt<TARGET_SEC)?'太早了！被守門員擋下～':'太晚了！被守門員收下～';
+      ballEl.animate(
+        [
+          {transform:'translate(0,0)'},
+          {transform:'translate(-14px,-6px) rotate(-6deg)'},
+          {transform:'translate(12px,-4px) rotate(6deg)'},
+          {transform:'translate(0,0)'}
+        ],{duration:420,easing:'ease-in-out'}
+      );
     }
   }
 
-  // ✅ 最保險的多事件綁定：支援 iPhone Safari / Android Chrome
   ['pointerdown','touchstart','mousedown'].forEach(evt=>{
     holdBtn.addEventListener(evt,e=>{e.preventDefault();start();},{passive:false});
   });
